--- a/p2/config.json
+++ b/p2/config.json
@@ -2,6 +2,6 @@
     "course": "CSE140-S24",
     "assignment": "p2",
     "server": "http://lighthouse.soe.ucsc.edu",
-    "user": "sslug@ucsc.edu",
-    "pass": "1234567890"
+    "user": "etchao@ucsc.edu",
+    "pass": "209b4373a4d416a2d0d78cb9dfcdb6bb"
 }
